# Phase-1-Hackathon-II-The-Evolution-of-Todo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  speckit.constitution  speckit.specify
specs/: phase1.plan  phase1.tasks
src/: cli.py  models.py  repository.py  service.py
tests/: test_service.py
